sidebar content collapse fixed

--- a/public/app-assets/css/components.css
+++ b/public/app-assets/css/components.css
@@ -303,7 +303,7 @@ body.fixed-footer footer.footer-dark {
         padding-left: 25px;
         transition: padding 0.35s ease 0s !important; }
       .main-menu.menu-light .navigation > li {
-        padding: 0 15px; }
+        padding: 5px 15px !important; }
         .main-menu.menu-light .navigation > li > a .label {
           margin-top: 4px;
           margin-right: 5px; }
